<?xml version="1.0" encoding="UTF-8"?>
<!--

    SPDX-License-Identifier: Apache-2.0
    Copyright 2011-2026 Hazendaz

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>60</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz</groupId>
    <artifactId>sitemesh</artifactId>
    <version>2.6.3-SNAPSHOT</version>

    <name>sitemesh</name>
    <description>Sitemesh web-page layout system.</description>
    <url>https://github.com/hazendaz/sitemesh2</url>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>manual</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:ssh://git@github.com/hazendaz/sitemesh2.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/sitemesh2.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/sitemesh2</url>
    </scm>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>sitemesh Distribution Wrapper GitHub Pages</name>
            <url>scm:git:ssh://git@github.com/hazendaz/sitemesh2.git</url>
        </site>
    </distributionManagement>

    <properties>
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>
        <javadoc.java.release.version>11</javadoc.java.release.version>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.sitemesh</module.name>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1765135571</project.build.outputTimestamp>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>4.0.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.18</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>6.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>6.1.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <configuration>
                        <rules>
                            <enforceBytecodeVersion>
                                <excludes>
                                    <!-- Jakarta jsp is provided, allow higher jdk -->
                                    <exclude>jakarta.servlet.jsp:jakarta.servlet.jsp-api</exclude>

                                    <!-- Allow freemarker higher jdk as it has one java16 labeled class -->
                                    <exclude>org.freemarker:freemarker</exclude>
                                </excludes>
                            </enforceBytecodeVersion>
                        </rules>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>de.jflex</groupId>
                <artifactId>jflex-maven-plugin</artifactId>
                <version>1.9.1</version>
                <configuration>
                    <lexDefinitions>
                        <lexDefinition>${project.basedir}/src/main/resources/com/opensymphony/module/sitemesh/html/tokenizer/lexer.flex</lexDefinition>
                    </lexDefinitions>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/jflex</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
